--- a/package.json
+++ b/package.json
@@ -34,9 +34,13 @@
 	"type": "module",
 	"dependencies": {
 		"@supabase/supabase-js": "^2.38.4",
+		"bits-ui": "^0.9.4",
 		"clsx": "^2.0.0",
+		"formsnap": "^0.4.1",
 		"lucide-svelte": "^0.292.0",
+		"sveltekit-superforms": "^1.10.1",
 		"tailwind-merge": "^2.0.0",
-		"tailwind-variants": "^0.1.18"
+		"tailwind-variants": "^0.1.18",
+		"zod": "^3.22.4"
 	}
 }
