--- a/package.json
+++ b/package.json
@@ -20,27 +20,28 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"formsnap": "^0.4.1",
 		"postcss": "^8.4.24",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"sveltekit-superforms": "^1.10.1",
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
+		"vite": "^4.4.2",
+		"zod": "^3.22.4"
 	},
 	"type": "module",
 	"dependencies": {
+		"@supabase/auth-helpers-sveltekit": "^0.10.7",
 		"@supabase/supabase-js": "^2.38.4",
 		"bits-ui": "^0.9.4",
 		"clsx": "^2.0.0",
-		"formsnap": "^0.4.1",
 		"lucide-svelte": "^0.292.0",
-		"sveltekit-superforms": "^1.10.1",
 		"tailwind-merge": "^2.0.0",
-		"tailwind-variants": "^0.1.18",
-		"zod": "^3.22.4"
+		"tailwind-variants": "^0.1.18"
 	}
 }
