--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"bits-ui": "^0.9.4",
 		"clsx": "^2.0.0",
 		"lucide-svelte": "^0.292.0",
+		"svelte-sonner": "^0.3.3",
 		"tailwind-merge": "^2.0.0",
 		"tailwind-variants": "^0.1.18"
 	}
