--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"gen:types": "supabase gen types typescript --project-id jalxdvhftqvgnwvlryve > src/lib/database.types.ts"
+		"gen:types": "supabase gen types typescript --project-id jalxdvhftqvgnwvlryve > src/lib/database.types.ts",
+		"gen:data": "ts-node --esm ./gen/index.ts"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
@@ -18,6 +19,7 @@
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.14",
+		"dotenv": "^16.3.1",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
@@ -30,6 +32,7 @@
 		"svelte-check": "^3.4.3",
 		"sveltekit-superforms": "^1.10.1",
 		"tailwindcss": "^3.3.2",
+		"ts-node": "^10.9.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
